# lilwil

./: CMakeLists.txt  README.md  Tests.md  setup.py
include/lilwil/: Approx.h  Binding.h  Config.h  Context.h  Glue.h  Impl.h  Macros.h  Numeric.h  Object.h  Signature.h  Stream.h  Test.h  Value.h
lilwil/: cli.py  common.py  console.py  junit.py  native.py  teamcity.py
source/: Main.cc  Module.cc  Python.cc  Source.cc  Test.cc  test  test.py
test/: CMakeLists.txt  Test.cc
